--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,9 @@
 <title>Coursera HTML</title>
 </head>
 <body>
-<h3>Hola Coursera desde HTML5</h3>
+<h1>Hola Coursera desde HTML5</h1>
+<br>
+<h3>Probando primera pagina</h3>
 </body>
 
 </html>
