--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE htm>
+<!doctype html>
 <html>
-<head>
-<title>Coursera HTML</title>
-</head>
-<body>
-<h1>Hola Coursera desde HTML5</h1>
-<br>
-<h3>Probando primera pagina</h3>
-</body>
-
+  <head>
+    <title>Modulo 2</title>
+  </head>
+  <body>
+    
+  </body>
 </html>
