--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
   <title>Test</title>
-  <link rel="stylesheet" href="ccs/style.ccs">
+  <link rel="stylesheet" href="/ccs/style.ccs">
 </head>
 <center><h1>The menu</h1></center>
 
