--- a/site/index.html
+++ b/site/index.html
@@ -8,8 +8,8 @@
 <center><h1>The menu</h1></center>
 
 <div id="div1" class="col-lg-4 col-md-6 col-min-12"><div id="title">Chicken</div><p>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl. It is one of the most common and widespread domestic animals, with a population of more than 19 billion as of 2011.[1] Humans keep chickens primarily as a source of food, consuming both their meat and their eggs.</p></div>
-<div id="div1" class="col-lg-4 col-md-6 col-min-12"><div id="title">Beef</div><p>Chicken</div><p>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl. It is one of the most common and widespread domestic animals, with a population of more than 19 billion as of 2011.[1] Humans keep chickens primarily as a source of food, consuming both their meat and their eggs.</p></div>
-<div id="div1" class="col-lg-4 col-md-12 col-min-12"><div id="title">Sushi</div><p>Chicken</div><p>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl. It is one of the most common and widespread domestic animals, with a population of more than 19 billion as of 2011.[1] Humans keep chickens primarily as a source of food, consuming both their meat and their eggs.</p></div>
+<div id="div1" class="col-lg-4 col-md-6 col-min-12"><div id="title">Beef</div><p>The chicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl. It is one of the most common and widespread domestic animals, with a population of more than 19 billion as of 2011.[1] Humans keep chickens primarily as a source of food, consuming both their meat and their eggs.</p></div>
+<div id="div1" class="col-lg-4 col-md-12 col-min-12"><div id="title">Sushi</div><p>Thechicken (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl. It is one of the most common and widespread domestic animals, with a population of more than 19 billion as of 2011.[1] Humans keep chickens primarily as a source of food, consuming both their meat and their eggs.</p></div>
 
 </html>
 
